--- a/notebooks/results/hierarchical.ipynb
+++ b/notebooks/results/hierarchical.ipynb
@@ -2,6 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# install verdict\n",
+    "!uv pip install verdict --system"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ExpertQA Hallucination Detection\n",
+    "#### See https://verdict.haizelabs.com/docs for a walkthrough of this example!"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
@@ -10,9 +28,6 @@
    },
    "outputs": [],
    "source": [
-    "#### ExpertQA Hallucination Detection\n",
-    "#### See https://verdict.haizelabs.com/docs for a walkthrough of this example!\n",
-    "\n",
     "from datasets import load_dataset\n",
     "\n",
     "from verdict import Pipeline, Layer\n",
@@ -60,8 +75,7 @@
     "    load_dataset('lytang/LLM-AggreFact').filter(\n",
     "        lambda row: row['dataset'] == 'ExpertQA'\n",
     "    ),\n",
-    "    columns=['claim', 'doc', 'label'], # we can also specify a custom input_fn to map each row into a Schema\n",
-    "    # max_samples=10 # randomly sample 10 examples for demo purposes\n",
+    "    columns=['claim', 'doc', 'label'] # we can also specify a custom input_fn to map each row into a Schema\n",
     ")\n",
     "\n",
     "# all responses from intermediate Units are available as columns in response_df!\n",
@@ -71,24 +85,27 @@
     "from verdict.util.experiment import display_stats, ExperimentConfig\n",
     "display_stats(response_df, ExperimentConfig(ground_truth_cols=['label'], prediction_cols=['pred_label']))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
