quickstart notebook results

--- a/notebooks/results/hierarchical.ipynb
+++ b/notebooks/results/hierarchical.ipynb
@@ -20,13 +20,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"> ───────────────────────────────────────────────────────────────────────────────────────────────────────────────── \n",
+       " <span style=\"font-weight: bold\"> Ground Truth </span> <span style=\"font-weight: bold\"> Prediction </span> <span style=\"font-weight: bold\">  </span> <span style=\"font-weight: bold\">        Acc.        </span> <span style=\"font-weight: bold\">     Cohen (κ)      </span> <span style=\"font-weight: bold\">    Kendall (τ)    </span> <span style=\"font-weight: bold\">    Spearman (ρ)    </span> \n",
+       " ───────────────────────────────────────────────────────────────────────────────────────────────────────────────── \n",
+       "         label   pred_label            78.47%                0.01                0.02                 0.02         \n",
+       " ───────────────────────────────────────────────────────────────────────────────────────────────────────────────── \n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       " ───────────────────────────────────────────────────────────────────────────────────────────────────────────────── \n",
+       " \u001b[1m \u001b[0m\u001b[1mGround Truth\u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1mPrediction\u001b[0m\u001b[1m \u001b[0m \u001b[1m  \u001b[0m \u001b[1m \u001b[0m\u001b[1m       Acc.       \u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1m    Cohen (κ)     \u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1m   Kendall (τ)   \u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1m   Spearman (ρ)   \u001b[0m\u001b[1m \u001b[0m \n",
+       " ───────────────────────────────────────────────────────────────────────────────────────────────────────────────── \n",
+       "         label   pred_label            78.47%                0.01                0.02                 0.02         \n",
+       " ───────────────────────────────────────────────────────────────────────────────────────────────────────────────── \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from datasets import load_dataset\n",
     "\n",
@@ -62,13 +84,12 @@
     "    Answer Justification: {previous.explanation}\n",
     "    \n",
     "    If you think the answer is correct, return the answer as is. If it's incorrect, return the opposite (if answer = \"yes\", return \"no\", and if answer = \"no\", return \"yes\").\n",
-    "    \"\"\").via(policy_or_name='gpt-4o-mini', retries=3, temperature=0.0)\n",
+    "    \"\"\").via(policy_or_name='gpt-4o', retries=3, temperature=0.0)\n",
     "\n",
     "# ...and then aggregate the results of the three judges+verifiers with a `MaxPoolUnit`\n",
     "pipeline = Pipeline() \\\n",
     "    >> Layer(judge_then_verify, repeat=3) \\\n",
     "    >> MaxPoolUnit()\n",
-    "\n",
     "\n",
     "# Load the ExpertQA dataset (https://arxiv.org/pdf/2309.07852)\n",
     "dataset = DatasetWrapper.from_hf(\n",
@@ -83,7 +104,7 @@
     "response_df['pred_label'] = response_df['Pipeline_root.block.block.unit[Map MaxPool]_choice'] == 'yes'\n",
     "\n",
     "from verdict.util.experiment import display_stats, ExperimentConfig\n",
-    "display_stats(response_df, ExperimentConfig(ground_truth_cols=['label'], prediction_cols=['pred_label']))"
+    "display_stats(response_df, ExperimentConfig(ground_truth_cols=['label'], prediction_cols=['pred_label']));"
    ]
   }
  ],
