--- a/notebooks/papers/llm-evaluators-are-not-fair-evaluators.ipynb
+++ b/notebooks/papers/llm-evaluators-are-not-fair-evaluators.ipynb
@@ -14,7 +14,11 @@
     "!wget https://raw.githubusercontent.com/i-Eval/FairEval/refs/heads/main/question.jsonl --no-clobber\n",
     "!wget https://raw.githubusercontent.com/i-Eval/FairEval/refs/heads/main/review/review_gpt35_vicuna-13b_human.txt --no-clobber\n",
     "!wget https://raw.githubusercontent.com/i-Eval/FairEval/refs/heads/main/answer/answer_gpt35.jsonl --no-clobber\n",
-    "!wget https://raw.githubusercontent.com/i-Eval/FairEval/refs/heads/main/answer/answer_vicuna-13b.jsonl --no-clobber"
+    "!wget https://raw.githubusercontent.com/i-Eval/FairEval/refs/heads/main/answer/answer_vicuna-13b.jsonl --no-clobber\n",
+    "\n",
+    "# This notebook has been run ahead of time, so you can inspect outputs without making\n",
+    "# any API calls. You can set your API key if you want to run the examples yourself.\n",
+    "# %env OPENAI_API_KEY=*************************"
    ]
   },
   {
