--- a/notebooks/results/hierarchical.ipynb
+++ b/notebooks/results/hierarchical.ipynb
@@ -7,7 +7,11 @@
    "outputs": [],
    "source": [
     "# install verdict\n",
-    "!uv pip install verdict --system"
+    "!uv pip install verdict --system\n",
+    "\n",
+    "# This notebook has been run ahead of time, so you can inspect outputs without making\n",
+    "# any API calls. You can set your API key if you want to run the examples yourself.\n",
+    "# %env OPENAI_API_KEY=*************************"
    ]
   },
   {
@@ -20,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -33,7 +37,7 @@
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"> ───────────────────────────────────────────────────────────────────────────────────────────────────────────────── \n",
        " <span style=\"font-weight: bold\"> Ground Truth </span> <span style=\"font-weight: bold\"> Prediction </span> <span style=\"font-weight: bold\">  </span> <span style=\"font-weight: bold\">        Acc.        </span> <span style=\"font-weight: bold\">     Cohen (κ)      </span> <span style=\"font-weight: bold\">    Kendall (τ)    </span> <span style=\"font-weight: bold\">    Spearman (ρ)    </span> \n",
        " ───────────────────────────────────────────────────────────────────────────────────────────────────────────────── \n",
-       "         label   pred_label            78.47%                0.01                0.02                 0.02         \n",
+       "         label   pred_label            78.88%                0.02                0.03                 0.03         \n",
        " ───────────────────────────────────────────────────────────────────────────────────────────────────────────────── \n",
        "</pre>\n"
       ],
@@ -41,7 +45,7 @@
        " ───────────────────────────────────────────────────────────────────────────────────────────────────────────────── \n",
        " \u001b[1m \u001b[0m\u001b[1mGround Truth\u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1mPrediction\u001b[0m\u001b[1m \u001b[0m \u001b[1m  \u001b[0m \u001b[1m \u001b[0m\u001b[1m       Acc.       \u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1m    Cohen (κ)     \u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1m   Kendall (τ)   \u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1m   Spearman (ρ)   \u001b[0m\u001b[1m \u001b[0m \n",
        " ───────────────────────────────────────────────────────────────────────────────────────────────────────────────── \n",
-       "         label   pred_label            78.47%                0.01                0.02                 0.02         \n",
+       "         label   pred_label            78.88%                0.02                0.03                 0.03         \n",
        " ───────────────────────────────────────────────────────────────────────────────────────────────────────────────── \n"
       ]
      },
