--- a/notebooks/common/ranker.ipynb
+++ b/notebooks/common/ranker.ipynb
@@ -8,7 +8,11 @@
    "outputs": [],
    "source": [
     "# install verdict\n",
-    "!uv pip install verdict --system"
+    "!uv pip install verdict --system\n",
+    "\n",
+    "# This notebook has been run ahead of time, so you can inspect outputs without making\n",
+    "# any API calls. You can set your API key if you want to run the examples yourself.\n",
+    "# %env OPENAI_API_KEY=*************************"
    ]
   },
   {
