--- a/notebooks/papers/g-eval.ipynb
+++ b/notebooks/papers/g-eval.ipynb
@@ -11,7 +11,11 @@
     "!uv pip install verdict --system\n",
     "\n",
     "# data\n",
-    "!wget https://raw.githubusercontent.com/nlpyang/geval/refs/heads/main/results/gpt4_coh_detailed.json --no-clobber"
+    "!wget https://raw.githubusercontent.com/nlpyang/geval/refs/heads/main/results/gpt4_coh_detailed.json --no-clobber\n",
+    "\n",
+    "# This notebook has been run ahead of time, so you can inspect outputs without making\n",
+    "# any API calls. You can set your API key if you want to run the examples yourself.\n",
+    "# %env OPENAI_API_KEY=*************************"
    ]
   },
   {
