options -> response_options for PairwiseJudgeUnit and descendants

--- a/notebooks/common/judge.ipynb
+++ b/notebooks/common/judge.ipynb
@@ -154,6 +154,7 @@
     "response, _ = (\n",
     "    Pipeline() \\\n",
     "    # default scale is DiscreteScale(['A', 'B'])\n",
+    "    # we can pass a custom scale using the `response_options` parameter\n",
     "    >> PairwiseJudgeUnit(explanation=True).prompt(\"\"\"\n",
     "        Chose the funnier joke\n",
     "\n",
