add huggingface login quickstart

--- a/notebooks/results/hierarchical.ipynb
+++ b/notebooks/results/hierarchical.ipynb
@@ -95,6 +95,10 @@
     "    >> Layer(judge_then_verify, repeat=3) \\\n",
     "    >> MaxPoolUnit()\n",
     "\n",
+    "# HuggingFace dataset requires authorization, so we need to login first.\n",
+    "# from huggingface_hub import login\n",
+    "# login()\n",
+    "\n",
     "# Load the ExpertQA dataset (https://arxiv.org/pdf/2309.07852)\n",
     "dataset = DatasetWrapper.from_hf(\n",
     "    load_dataset('lytang/LLM-AggreFact').filter(\n",
