move hf dataset login to top

--- a/notebooks/results/hierarchical.ipynb
+++ b/notebooks/results/hierarchical.ipynb
@@ -11,7 +11,12 @@
     "\n",
     "# This notebook has been run ahead of time, so you can inspect outputs without making\n",
     "# any API calls. You can set your API key if you want to run the examples yourself.\n",
-    "# %env OPENAI_API_KEY=*************************"
+    "# %env OPENAI_API_KEY=*************************\n",
+    "\n",
+    "# Be sure to obtain dataset access first at https://huggingface.co/datasets/lytang/LLM-AggreFact\n",
+    "# HuggingFace dataset requires authorization, so we need to login first.\n",
+    "from huggingface_hub import login\n",
+    "login()"
    ]
   },
   {
@@ -94,10 +99,6 @@
     "pipeline = Pipeline() \\\n",
     "    >> Layer(judge_then_verify, repeat=3) \\\n",
     "    >> MaxPoolUnit()\n",
-    "\n",
-    "# HuggingFace dataset requires authorization, so we need to login first.\n",
-    "# from huggingface_hub import login\n",
-    "# login()\n",
     "\n",
     "# Load the ExpertQA dataset (https://arxiv.org/pdf/2309.07852)\n",
     "dataset = DatasetWrapper.from_hf(\n",
