max_samples=10 for intro notebook

--- a/notebooks/results/hierarchical.ipynb
+++ b/notebooks/results/hierarchical.ipynb
@@ -105,11 +105,12 @@
     "    load_dataset('lytang/LLM-AggreFact').filter(\n",
     "        lambda row: row['dataset'] == 'ExpertQA'\n",
     "    ),\n",
-    "    columns=['claim', 'doc', 'label'] # we can also specify a custom input_fn to map each row into a Schema\n",
+    "    columns=['claim', 'doc', 'label'], # we can also specify a custom input_fn to map each row into a Schema\n",
+    "    max_samples=10 # comment this out to run on the entire dataset\n",
     ")\n",
     "\n",
     "# all responses from intermediate Units are available as columns in response_df!\n",
-    "response_df, _ = pipeline.run_from_dataset(dataset['test'], max_workers=1024)\n",
+    "response_df, _ = pipeline.run_from_dataset(dataset['test'], max_workers=1024) # add display=True to visualize the execution graph in the terminal\n",
     "response_df['pred_label'] = response_df['Pipeline_root.block.block.unit[Map MaxPool]_choice'] == 'yes'\n",
     "\n",
     "from verdict.util.experiment import display_stats, ExperimentConfig\n",
